SERVER-36979 Aborting a transaction must abort WUOW before releasing locks.