src/mongo/db/session.cpp
@@ -682,9 +682,9 @@ Session::TxnResources::~TxnResources() {
         // This should only be reached when aborting a transaction that isn't active, i.e.
         // when starting a new transaction before completing an old one.  So we should
         // be at WUOW nesting level 1 (only the top level WriteUnitOfWork).
+        _recoveryUnit->abortUnitOfWork();
         _locker->endWriteUnitOfWork();
         invariant(!_locker->inAWriteUnitOfWork());
-        _recoveryUnit->abortUnitOfWork();
     }
 }
 
